/*
 * Project SmartREST
 * Copyright (c) Alessio Saltarin 2021.
 * This software is licensed under MIT License (see LICENSE)
 */

plugins {
	id "org.springframework.boot" version "2.4.1"
	id "io.spring.dependency-management" version "1.0.10.RELEASE"
	id "org.jetbrains.kotlin.jvm" version "1.4.21"
	id "org.jetbrains.kotlin.plugin.spring" version "1.4.21"
	id "org.jetbrains.kotlin.plugin.jpa" version "1.4.21"
	id "org.jetbrains.kotlin.plugin.allopen" version "1.4.21"
	id "org.jetbrains.kotlin.plugin.noarg" version "1.4.21"
	id "de.fuerstenau.buildconfig" version "1.1.8"
	id "java"
	id "idea"
}

allOpen {
	annotation("javax.persistence.Entity")
	annotation("javax.persistence.Embeddable")
	annotation("javax.persistence.MappedSuperclass")
}

noArg {
	annotation("javax.persistence.Entity")
}

bootRun {
	jvmArgs = ["--add-opens=java.base/java.net=ALL-UNNAMED",
			   "--add-opens=java.base/java.lang=ALL-UNNAMED"]
}

test {
	jvmArgs = ["--add-opens=java.base/java.net=ALL-UNNAMED",
			   "--add-opens=java.base/java.lang=ALL-UNNAMED"]
}

compileKotlin {
	kotlinOptions {
		freeCompilerArgs = ['-Xjsr305=strict']
		jvmTarget = "11"
	}
}

compileTestKotlin {
	kotlinOptions {
		freeCompilerArgs = ['-Xjsr305=strict']
		jvmTarget = "11"
	}
}

group = "net.littlelite"
sourceCompatibility = 1.14

repositories {
	mavenCentral()
}

dependencies {
	implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springboot_version"
	implementation "org.springframework.boot:spring-boot-starter-web:$springboot_version"
	implementation("org.springframework.boot:spring-boot-starter-freemarker:$springboot_version")
	implementation("org.springframework.boot:spring-boot-starter-hateoas:$springboot_version")
	implementation("org.springframework.boot:spring-boot-starter-validation:$springboot_version")
	implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
	implementation("org.springframework.plugin:spring-plugin-core:1.2.0.RELEASE")
	implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
	implementation("io.springfox:springfox-swagger2:$swagger_version")
	implementation("io.springfox:springfox-swagger-ui:$swagger_version")
	implementation("org.jetbrains.kotlin:kotlin-reflect:$kotlin_version")
	testImplementation("org.springframework.boot:spring-boot-starter-test:$springboot_version") {
		exclude group: "org.junit.vintage", module: "junit-vintage-engine"
	}
	runtimeOnly("com.h2database:h2:$h2_version")
}

test {
	useJUnitPlatform()
}

buildConfig {
	appName = project.name           // sets value of NAME field
	version = application_version    // sets value of VERSION field
	clsName = "BuildConfig"          // sets the name of the BuildConfig class
	packageName = project.group      // sets the package of the BuildConfig class
	buildConfigField "java.util.Date", "BUILD_DATE", "new java.util.Date(" + System.currentTimeMillis() + "L)"
}

